--- a/what-is-ambigram.html
+++ b/what-is-ambigram.html
@@ -67,9 +67,9 @@
 
 <body class="bg-light text-dark font-sans">
   <header class="bg-white shadow-md sticky top-0 z-50">
-    <div class="container mx-auto px-4 py-4 flex justify-between items-center flex-wrap">
+    <div class="container mx-auto px-4 py-2 md:py-4 flex justify-between items-center flex-wrap">
       <a href="/" class="flex items-center text-xl font-bold text-dark hover:text-primary transition-colors">
-        <img src="/logo.png" alt="">
+        <img src="/logo.png" alt="ambigramgenerator logo" class="h-10 md:h-12">
       </a>
       <nav id="main-nav" class="hidden md:flex items-center space-x-6">
         <a href="/generator" class="text-dark hover:text-primary font-medium transition-colors">2D Generator</a>
@@ -101,6 +101,14 @@
               Principles</a>
             <a href="/guide/ambigram-history-art" class="block px-4 py-2 text-dark hover:bg-gray-100">Ambigram History
               and Art</a>
+            <a href="/guide/ultimate-free-generator" class="block px-4 py-2 text-dark hover:bg-gray-100">
+              Ultimate Free Generator</a>
+            <a href="/guide/best-online-tools" class="block px-4 py-2 text-dark hover:bg-gray-100">
+              Best Online Tools</a>
+            <a href="/guide/name-generator-secrets" class="block px-4 py-2 text-dark hover:bg-gray-100">
+              Name Generator Secrets</a>
+            <a href="/guide/advanced-3d-controls" class="block px-4 py-2 text-dark hover:bg-gray-100">
+              Advanced 3D Controls</a>
           </div>
         </div>
 
@@ -118,13 +126,13 @@
     </div>
     <!-- Mobile Menu -->
     <div id="mobile-menu" class="hidden md:hidden bg-white border-t border-gray-200">
-      <a href="/generator" class="block py-2 px-4 text-dark hover:bg-gray-100">2D Generator</a>
-      <a href="/3d-generator" class="block py-2 px-4 text-dark hover:bg-gray-100">3D Generator</a>
-      <a href="/what-is-ambigram" class="block py-2 px-4 text-dark hover:bg-gray-100">What is an Ambigram</a>
+      <a href="/generator" class="block py-1 px-4 text-dark hover:bg-gray-100">2D Generator</a>
+      <a href="/3d-generator" class="block py-1 px-4 text-dark hover:bg-gray-100">3D Generator</a>
+      <a href="/what-is-ambigram" class="block py-1 px-4 text-dark hover:bg-gray-100">What is an Ambigram</a>
 
       <!-- Mobile Tutorial Accordion/Dropdown -->
       <div class="border-b border-gray-200">
-        <button class="flex justify-between items-center w-full py-2 px-4 text-dark hover:bg-gray-100"
+        <button class="flex justify-between items-center w-full py-1 px-4 text-dark hover:bg-gray-100"
           onclick="toggleMobileTutorial()">
           Tutorial
           <svg class="ml-2 w-4 h-4 transform transition-transform duration-300" id="mobile-tutorial-arrow" fill="none"
@@ -133,29 +141,36 @@
           </svg>
         </button>
         <div id="mobile-tutorial-links">
-          <a href="/tutorial/multi-word-guide" class="block px-8 py-2 text-dark hover:bg-gray-100">Multi-Word
+          <a href="/tutorial/multi-word-guide" class="block px-8 py-1 text-dark hover:bg-gray-100">Multi-Word
             Guide</a>
-          <a href="/tutorial/tattoo-design" class="block px-8 py-2 text-dark hover:bg-gray-100">Tattoo Design
+          <a href="/tutorial/tattoo-design" class="block px-8 py-1 text-dark hover:bg-gray-100">Tattoo Design
             Guide</a>
-          <a href="/tutorial/two-name-ambigram" class="block px-8 py-2 text-dark hover:bg-gray-100">Two-Name
+          <a href="/tutorial/two-name-ambigram" class="block px-8 py-1 text-dark hover:bg-gray-100">Two-Name
             Ambigram</a>
-          <a href="/guide/2d-vs-3d-design" class="block px-8 py-2 text-dark hover:bg-gray-100">2D vs 3D
-            Design</a>
+          <a href="/guide/2d-vs-3d-design" class="block px-8 py-1 text-dark hover:bg-gray-100">2D vs 3D Design</a>
 
-          <a href="/guide/flipscript-principles" class="block px-8 py-2 text-dark hover:bg-gray-100">Flipscript
+          <a href="/guide/flipscript-principles" class="block px-8 py-1 text-dark hover:bg-gray-100">Flipscript
             Principles</a>
-          <a href="/guide/ambigram-history-art" class="block px-8 py-2 text-dark hover:bg-gray-100">Ambigram
-            History
+          <a href="/guide/ambigram-history-art" class="block px-8 py-1 text-dark hover:bg-gray-100">Ambigram History
             and Art</a>
+          <a href="/guide/ultimate-free-generator" class="block px-8 py-1 text-dark hover:bg-gray-100">
+            Ultimate Free Generator</a>
+          <a href="/guide/best-online-tools" class="block px-8 py-1 text-dark hover:bg-gray-100">
+            Best Online Tools</a>
+          <a href="/guide/name-generator-secrets" class="block px-8 py-1 text-dark hover:bg-gray-100">
+            Name Generator Secrets</a>
+          <a href="/guide/advanced-3d-controls" class="block px-8 py-1 text-dark hover:bg-gray-100">
+            Advanced 3D Controls</a>
+
         </div>
       </div>
 
-      <a href="/tattoo-design" class="block py-2 px-4 text-dark hover:bg-gray-100">Design Guides</a>
-      <a href="/privacy" class="block py-2 px-4 text-dark hover:bg-gray-100">Privacy Policy</a>
-      <a href="/terms" class="block py-2 px-4 text-dark hover:bg-gray-100">Terms of Service</a>
-      <div class="p-4">
+      <a href="/tattoo-design" class="block py-1 px-4 text-dark hover:bg-gray-100">Design Guides</a>
+      <a href="/privacy" class="block py-1 px-4 text-dark hover:bg-gray-100">Privacy Policy</a>
+      <a href="/terms" class="block py-1 px-4 text-dark hover:bg-gray-100">Terms of Service</a>
+      <div class="p-2">
         <a href="#generator"
-          class="block text-center bg-primary text-white px-4 py-2 rounded-full hover:bg-blue-600 transition-colors w-full">Start
+          class="block text-center bg-primary text-white px-4 py-1 rounded-full hover:bg-blue-600 transition-colors w-full">Start
           Creating</a>
       </div>
     </div>
@@ -176,7 +191,6 @@
       arrow.classList.toggle('rotate-180'); // Rotate arrow when open
     }
   </script>
-
   <main>
     <section class="bg-dark text-white py-16">
       <div class="container mx-auto px-4 text-center">
