--- a/3d-generator.html
+++ b/3d-generator.html
@@ -11,7 +11,10 @@
         content="3d ambigram generator, ambigram stl file, 3d printable ambigram, ambigram gif creator, 3d ambigram maker, free 3d generator, stl download">
     <meta name="google-adsense-account" content="ca-pub-3383070348689557">
     <!-- Stylesheets & Fonts -->
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="preload" href="/assets/main-D62YCris.css" as="style" onload="this.rel='stylesheet'">
+    <noscript>
+        <link rel="stylesheet" crossorigin href="/assets/main-D62YCris.css">
+    </noscript>
     <link rel="canonical" href="https://www.ambigramgenerator.me/3d-generator" />
     <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Montserrat:wght@700;800&display=swap"
@@ -40,24 +43,7 @@
         })(window, document, "clarity", "script", "ti80pje0n3");
     </script>
 
-    <script>
-        tailwind.config = {
-            theme: {
-                extend: {
-                    colors: {
-                        primary: '#3B82F6',
-                        secondary: '#10B981',
-                        dark: '#1F2937',
-                        light: '#F9FAFB',
-                    },
-                    fontFamily: {
-                        sans: ['Inter', 'system-ui', 'sans-serif'],
-                        display: ['Montserrat', 'sans-serif']
-                    },
-                }
-            }
-        }
-    </script>
+
 </head>
 
 <body class="bg-light text-dark font-sans">
