--- a/ambigram-generator-guide.html
+++ b/ambigram-generator-guide.html
@@ -9,7 +9,10 @@
         content="Comprehensive analysis of ambigram generators: compare top tools, learn how to create ambigrams, and discover the best free ambigram maker for tattoos and designs.">
     <meta name="keywords"
         content="ambigram generator, ambigram maker, free ambigram generator, ambigram tattoo generator, name ambigram generator">
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="preload" href="/assets/main-D62YCris.css" as="style" onload="this.rel='stylesheet'">
+    <noscript>
+        <link rel="stylesheet" crossorigin href="/assets/main-D62YCris.css">
+    </noscript>
     <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.8/dist/chart.umd.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,32 +21,7 @@
         href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Playfair+Display:wght@400;500;600;700&family=Poppins:wght@300;400;500;600;700&family=Montserrat:wght@300;400;500;600;700&family=Roboto:wght@300;400;500;700&family=Lobster&family=Pacifico&family=Great+Vibes&family=Orbitron&family=Rajdhani:wght@400;500;600;700&display=swap"
         rel="stylesheet">
 
-    <script>
-        tailwind.config = {
-            theme: {
-                extend: {
-                    colors: {
-                        primary: '#6C5CE7',
-                        secondary: '#FD79A8',
-                        dark: '#2D3436',
-                        light: '#F8F9FA',
-                    },
-                    fontFamily: {
-                        inter: ['Inter', 'sans-serif'],
-                        poppins: ['Poppins', 'sans-serif'],
-                        montserrat: ['Montserrat', 'sans-serif'],
-                        roboto: ['Roboto', 'sans-serif'],
-                        playfair: ['Playfair Display', 'serif'],
-                        lobster: ['Lobster', 'cursive'],
-                        pacifico: ['Pacifico', 'cursive'],
-                        vibes: ['Great Vibes', 'cursive'],
-                        orbitron: ['Orbitron', 'sans-serif'],
-                        rajdhani: ['Rajdhani', 'sans-serif'],
-                    },
-                }
-            }
-        }
-    </script>
+
 
     <style type="text/tailwindcss">
         @layer utilities {
