--- a/faq.html
+++ b/faq.html
@@ -7,12 +7,15 @@
   <title>FAQ | Ambigram Generator</title>
   <meta name="description"
     content="Frequently asked questions about our ambigram generator service, usage, and features." />
-  <script type="module" src="./js/tailwindcss.js"></script>
+
   <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <meta name="google-adsense-account" content="ca-pub-3383070348689557" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="preload" href="/assets/main-D62YCris.css" as="style" onload="this.rel='stylesheet'">
+  <noscript>
+    <link rel="stylesheet" crossorigin href="/assets/main-D62YCris.css">
+  </noscript>
 
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3383070348689557"
     crossorigin="anonymous"></script>
@@ -42,76 +45,7 @@
       y.parentNode.insertBefore(t, y);
     })(window, document, "clarity", "script", "ti80pje0n3");
   </script>
-  <script>
-    tailwind.config = {
-      theme: {
-        extend: {
-          colors: {
-            primary: "#6C5CE7",
-            secondary: "#FD79A8",
-            dark: "#2D3436",
-            light: "#F8F9FA",
-            accent: "#00B894",
-          },
-          fontFamily: {
-            inter: ["Inter", "sans-serif"],
-            poppins: ["Poppins", "sans-serif"],
-            montserrat: ["Montserrat", "sans-serif"],
-            roboto: ["Roboto", "sans-serif"],
-            playfair: ["Playfair Display", "serif"],
-            lobster: ["Lobster", "cursive"],
-            pacifico: ["Pacifico", "cursive"],
-            vibes: ["Great Vibes", "cursive"],
-            orbitron: ["Orbitron", "sans-serif"],
-            rajdhani: ["Rajdhani", "sans-serif"],
-          },
-          animation: {
-            float: "float 6s ease-in-out infinite",
-            "pulse-slow": "pulse 4s cubic-bezier(0.4, 0, 0.6, 1) infinite",
-            "bounce-slow": "bounce 3s infinite",
-          },
-          keyframes: {
-            float: {
-              "0%, 100%": { transform: "translateY(0)" },
-              "50%": { transform: "translateY(-10px)" },
-            },
-          },
-        },
-      },
-    };
-  </script>
 
-  <style type="text/tailwindcss">
-    @layer utilities {
-        .content-auto {
-          content-visibility: auto;
-        }
-        .text-shadow {
-          text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
-        }
-        .text-shadow-lg {
-          text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.5);
-        }
-        .rotate-180 {
-          transform: rotate(180deg);
-        }
-        .ambigram-container {
-          transition: transform 0.5s ease;
-        }
-        .ambigram-container:hover {
-          transform: scale(1.02);
-        }
-        .glass-effect {
-          backdrop-filter: blur(10px);
-          background-color: rgba(255, 255, 255, 0.1);
-        }
-        .gradient-text {
-          background-clip: text;
-          -webkit-background-clip: text;
-          color: transparent;
-        }
-      }
-    </style>
 </head>
 
 <body class="font-inter bg-gradient-to-br from-dark to-gray-800 text-light min-h-screen">
