--- a/feedback.html
+++ b/feedback.html
@@ -12,7 +12,10 @@
     <meta name="google-adsense-account" content="ca-pub-3383070348689557" />
     <link rel="icon" type="image/x-icon" href="./favicon.ico" />
     <link rel="canonical" href="https://www.ambigramgenerator.me/feedback" />
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="preload" href="/assets/main-D62YCris.css" as="style" onload="this.rel='stylesheet'">
+    <noscript>
+        <link rel="stylesheet" crossorigin href="/assets/main-D62YCris.css">
+    </noscript>
 
     <!-- Reusing all performance optimizations from your index page -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
