--- a/guide/advanced-3d-controls.html
+++ b/guide/advanced-3d-controls.html
@@ -10,7 +10,10 @@
     <meta name="google-adsense-account" content="ca-pub-3383070348689557" />
     <meta name="keywords"
         content="advanced ambigram controls, ambigram generator software, create new ambigram generator, 3d lighting ambigram, three.js ambigram, custom rotation axis" />
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="preload" href="/assets/main-D62YCris.css" as="style" onload="this.rel='stylesheet'">
+    <noscript>
+        <link rel="stylesheet" crossorigin href="/assets/main-D62YCris.css">
+    </noscript>
     <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet" />
 
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3383070348689557"
@@ -38,24 +41,7 @@
             y.parentNode.insertBefore(t, y);
         })(window, document, "clarity", "script", "ti80pje0n3");
     </script>
-    <script>
-        tailwind.config = {
-            theme: {
-                extend: {
-                    colors: {
-                        primary: "#3B82F6",
-                        secondary: "#10B981",
-                        dark: "#1F2937",
-                        light: "#F9FAFB",
-                    },
-                    fontFamily: {
-                        sans: ["Inter", "system-ui", "sans-serif"],
-                        display: ["Montserrat", "sans-serif"],
-                    },
-                },
-            },
-        };
-    </script>
+
     <style type="text/tailwindcss">
         @layer utilities {
         .content-auto {
