--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
   <meta name="google-adsense-account" content="ca-pub-3383070348689557" />
   <link rel="icon" type="image/x-icon" href="./favicon.ico" />
   <link rel="canonical" href="https://www.ambigramgenerator.me/" />
-  <script src="https://cdn.tailwindcss.com"></script>
 
   <!-- ===== LOADING PERFORMANCE OPTIMIZATIONS START ===== -->
 
@@ -621,10 +620,10 @@
   </script>
 
   <!-- Non-critical CSS loaded asynchronously -->
-  <!-- <link rel="preload" href="./assets/main-D62YCris.css" as="style" onload="this.rel='stylesheet'">
+  <link rel="preload" href="./assets/main-D62YCris.css" as="style" onload="this.rel='stylesheet'">
   <noscript>
     <link rel="stylesheet" crossorigin href="./assets/main-D62YCris.css">
-  </noscript> -->
+  </noscript>
 </head>
 
 <body class="bg-light text-dark font-sans min-h-screen flex flex-col">
