--- a/about.html
+++ b/about.html
@@ -7,7 +7,10 @@
     <title>About Us | AmbigramGenerator.me</title>
     <meta name="description"
         content="Learn about AmbigramGenerator.me, our vision, the open-source technology we use, and our commitment to content and community." />
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="preload" href="/assets/main-D62YCris.css" as="style" onload="this.rel='stylesheet'">
+    <noscript>
+        <link rel="stylesheet" crossorigin href="/assets/main-D62YCris.css">
+    </noscript>
     <link rel="canonical" href="https://www.ambigramgenerator.me/about" />
     <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Montserrat:wght@700;800&display=swap"
@@ -29,24 +32,7 @@
             y = l.getElementsByTagName(r)[0]; y.parentNode.insertBefore(t, y);
         })(window, document, "clarity", "script", "ti80pje0n3");
     </script>
-    <script>
-        tailwind.config = {
-            theme: {
-                extend: {
-                    colors: {
-                        primary: "#3B82F6",
-                        secondary: "#10B981",
-                        dark: "#1F2937",
-                        light: "#F9FAFB",
-                    },
-                    fontFamily: {
-                        sans: ["Inter", "system-ui", "sans-serif"],
-                        display: ["Montserrat", "sans-serif"],
-                    },
-                },
-            },
-        };
-    </script>
+
 </head>
 
 <body class="bg-light text-dark font-sans">
