--- a/index.html
+++ b/index.html
@@ -619,11 +619,9 @@
     });
   </script>
 
-  <!-- Non-critical CSS loaded asynchronously -->
-  <link rel="preload" href="./assets/main-D62YCris.css" as="style" onload="this.rel='stylesheet'">
-  <noscript>
-    <link rel="stylesheet" crossorigin href="./assets/main-D62YCris.css">
-  </noscript>
+
+  <link rel="stylesheet" href="/assets/main-D62YCris.css">
+
 </head>
 
 <body class="bg-light text-dark font-sans min-h-screen flex flex-col">
